[package]
edition = "2021"
name = "advert-monitor-rust"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.16"
itertools = "0.10.1"

dotenv = "0.15.0"
env_logger = {version = "0.9.0"}
log = "0.4.14"

lazy_static = "1.4.0"

serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
serde_repr = "0.1.7"
serde_yaml = "0.8.21"

chrono = {version = "0.4.18", features = ["serde"]}

async-std = "1.10.0"
sqlx = {version = "0.5.9", features = ["mysql", "chrono", "json", "decimal", "runtime-async-std-native-tls"]}

job_scheduler = "1.2.0"
reqwest = {version = "0.11.5", features = ["json", "blocking"]}
